// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render and match the snapshot 1`] = `
<button
  class="button primary medium"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> should render and match the snapshot 2`] = `
<button
  class="button primary medium flat"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> should render and match the snapshot 3`] = `
<button
  class="button primary medium outlined"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> should render and match the snapshot 4`] = `
<button
  class="button primary medium disabled"
  disabled=""
  type="button"
>
  Button
</button>
`;

exports[`<Button /> should render and match the snapshot 5`] = `
<a
  class="button primary medium"
  href="/"
>
  Button
</a>
`;
